Opened 8 years ago
Closed 14 months ago
#8351 closed bug (fixed)
AR9287 - syslog says 'creating device failed'
Reported by: | danboid | Owned by: | korli |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Drivers/Network/atheroswifi | Version: | R1/Development |
Keywords: | AR9287 atheros wifi creating device failed | Cc: | |
Blocked By: | Blocking: | ||
Has a Patch: | no | Platform: | x86 |
Description
I installed an AR9287 pci-e card into my Dell Inspiron Mini 10 and it works fine under Linux but not under the gcc2hybrid nightly build rev43781 which should support this chipset now, apparently.
Some relevant syslog lines:
KERN: atheroswifi: creating device failed. KERN: etherpci: init_driver init_driver: etherpci not found
Attachments (2)
Change History (16)
comment:1 by , 8 years ago
comment:2 by , 8 years ago
I meant to post a ticket about this, as it affects me with my AR5212-based wireless, device ID 1014. It is suspected that the glue code may need updated to fix this. If I get a chance later this weekend, I'll try to dig around a bit more to see if I can dig up any clues.
comment:3 by , 8 years ago
Component: | Drivers/Network → Drivers/Network/atheroswifi |
---|---|
Owner: | changed from | to
Status: | new → assigned |
Please provide a syslog, useful to identify the network device. Thanks in advance.
by , 8 years ago
syslog from a Inspiron Mini 10 w/ non-working AR9287 pci-e wifi
comment:5 by , 8 years ago
Just noticed your new revision korli - I will test it tomorrow when the nightlies have this patch included - thanks!
comment:6 by , 8 years ago
This fixes things for me. The device shows up and everything looks good in the syslog.
DHCP is busted for me via wi-fi (it times out), but I noticed that before you made the FreeBSD 9 changes, so it is an unrelated issue that I'll look into tomorrow.
In any case, you may want to wait to hear back from danboid, but I think it's pretty safe to close this ticket as fixed.
comment:7 by , 8 years ago
I've installed the 43789 nightly on my netbook now and not only is my AR9287 showing up fine as a network adapter but, unlike jprostko, DHCP is working fine for it too!
Thanks korli!
comment:10 by , 14 months ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
BETA 1
device Network Controller [ 2/80/0 ]
vendor 168c: Qualcomm Atheros
device 002e: AR9287 Wireless
Network Adapter (PCI-Express)
The driver is in the tree
https://github.com/haiku/haiku/blob/master/src/add-ons/kernel/drivers/network/wlan/atheroswifi/dev/ath/ath_hal/ar9002/ar9287.ini
by , 14 months ago
comment:13 by , 14 months ago
@diver sorry buddy. Haiku enters in KDL when I try to mount any partitions to copy the syslog.
But the piece that matters is:
KERN:[atheroswifi] (ath_pci) bus_alloc_resource(3,[16],0x0,0xffffffffffffffff,0x1,0x2) KERN:add_memory_type_range(10779,0xdfc00000,0x10000,0) KERN:set MTRRs to: (...) KERN:[atheroswifi] (ath_pci) bus_alloc_resource(1,[0],0x0,0xffffffffffffffff,0x1,0x6) KERN:[atheroswifi] (ath_pci) unable to attach hardware; HAL status 3 KERN:remove_memory_type_range(10779,0xdfc00000,0x10000,0)
comment:14 by , 14 months ago
Resolution: | → fixed |
---|---|
Status: | reopened → closed |
That would be a dupe of #14521 then.
I am experiencing this same bug, with atheroswifi: creating device failed, on my eeepc 900, with hrev43781.