atheroswifi: try at fixing #8351

* ath introduced an inconsistency between driver module name and driver_t name
  which the compat layer uses to lookup driver symbol
* we now use ath_pci instead of ath as driver_t name member.
* trace a message when a symbol can't be found during driver module search.